--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,9 @@
             <version>6.0</version>  
         </dependency>               
         <dependency>  
-            <groupId>org.primefaces.themes</groupId>  
-            <artifactId>cupertino</artifactId>  
-            <version>1.0.10</version>  
+            <groupId>org.primefaces.extensions</groupId>  
+            <artifactId>all-themes</artifactId>  
+            <version>1.0.8</version>  
         </dependency>                  
         <!-- End Primefaces dependencies -->
         
