--- a/pom.xml
+++ b/pom.xml
@@ -118,8 +118,64 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin> 
+            </plugin>                          
         </plugins>
     </build>
+    
+    <profiles>
+        <profile>
+            <id>spotify</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.spotify</groupId>
+                        <artifactId>docker-maven-plugin</artifactId>
+                        <version>0.4.13</version>
+                        <configuration>
+                            <serverId>docker-hub</serverId>                            
+                            <imageName>donjwhite1/${project.build.finalName}</imageName>
+                            <imageTags>
+                                <imageTag>${project.version}</imageTag>
+                                <imageTag>latest</imageTag>
+                            </imageTags>
+                            <dockerDirectory>${basedir}/assembly/docker</dockerDirectory>
+                            <resources>
+                                <resource>
+                                    <targetPath>/</targetPath>
+                                    <directory>${project.build.directory}</directory>
+                                    <include>${project.build.finalName}.war</include>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>fabric8</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>io.fabric8</groupId>
+                        <artifactId>docker-maven-plugin</artifactId>
+                        <version>0.15.16</version>
+                        <configuration>
+                            <images>
+                                <image>
+                                    <name>donjwhite1/%a:%l</name>
+                                    <build>
+                                        <from>tomcat:8.0.20-jre8</from>
+                                        <assembly>
+                                            <descriptor>${basedir}/assembly/assembly.xml</descriptor>
+                                        </assembly>
+                                    </build>
+                                </image>
+                            </images>
+                        </configuration>                                               
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
     
 </project>
