Updated Kubernetes deployment to set the version number to a configurable value.

--- a/kubernetes/messageboard.yaml
+++ b/kubernetes/messageboard.yaml
@@ -8,7 +8,7 @@ spec:
     metadata:
       labels:
         app: messageboard
-        version: "1.2"
+        version: "1.JENKINS_BUILD_VERSION_NUMBER"
     spec:
       containers:
         - name: messageboard
