--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
     </context-param>
     <context-param>  
         <param-name>primefaces.THEME</param-name>  
-        <param-value>cupertino</param-value>  
+        <param-value>redmond</param-value>  
     </context-param>
     <listener>  
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>  
