--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,8 @@
     <context-param>  
         <param-name>primefaces.THEME</param-name>  
         <!--<param-value>cupertino</param-value>-->
-        <param-value>sunny</param-value>  
+        <param-value>blitzer</param-value>
+        <!--<param-value>sunny</param-value>-->
     </context-param>
     <listener>  
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>  
