--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,9 +11,9 @@
     </context-param>
     <context-param>  
         <param-name>primefaces.THEME</param-name>  
-        <!--<param-value>cupertino</param-value>-->
+        <param-value>cupertino</param-value>
         <!--<param-value>blitzer</param-value>-->
-        <param-value>sunny</param-value>
+        <!--<param-value>sunny</param-value>-->
     </context-param>
     <listener>  
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>  
